AG: geoload-6-0-3-1
DATE: 03/07/2016
STAFF: lec 
CHANGES: TR12083/replace "vachar(30)" with "text"

TAG: geoload-6-0-0-1
DATE: 7/23/15
STAFF: pf
CHANGES: postgres conversion release tag

TAG: geoload-tr11750-MP
DATE: 06/29/2015
STAFF: kstone

TAG: geoload-tr11750-BP
DATE: 05/28/2015
STAFF: kstone

TAG: geoload-5-1-0-1
DATE: 10/19/2012
STAFF: dbm
CHANGES:
1) TR11163: Config changes

TAG: geoload-4-4-2-1
DATE: 02/09/2021
STAFF: sc
CHANGES: TR10986
1) getGeoEntrez.py - change 'term': 'gene_geo[filter] to
   'term': 'gene_geoprofiles[filter]

TAG: geoload-4-4-0-1
DATE: 10/18/2010
STAFF: dbm
CHANGES:
1) geoload.sh: fixed copy/paste errors in comments

TAG: geoload-4-1-1-3
DATE: 07/20/2008
STAFF: dbm
CHANGES: Make associations private

TAG: geoload-4-1-1-2
DATE: 07/10/2008
STAFF: dbm
CHANGES: Minor tweaks

TAG: geoload-4-1-1-1
DATE: 07/09/2008
STAFF: dbm
CHANGES: New load (TR9074)
