@@ -1,3 +1,10 @@
+TAG: geoload-6-0-4-1
+DATE: 04/28/2016
+STAFF: lec 
+CHANGES: TR12069/postgres cleanup
+1) convert to Git 
+2) add "db.setAutoTranslate"
+
 AG: geoload-6-0-3-1
 DATE: 03/07/2016
 STAFF: lec 
